<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SpecificGravityCorrection" >

    <RadioGroup
        android:id="@+id/unitSelectionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/sg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="setUnitType"
            android:text="@string/sg" />

        <RadioButton
            android:id="@+id/brix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="setUnitType"
            android:text="@string/brix" />
    </RadioGroup>

    <TextView
        android:id="@+id/ogLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/unitSelectionGroup"
        android:text="@string/og" />

    <EditText
        android:id="@+id/ogValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ogValue"
        android:layout_below="@+id/ogLabel"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/ogUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/ogValue"
        android:layout_toRightOf="@id/ogValue"
        android:textIsSelectable="false" />

    <RadioGroup
        android:id="@+id/measurementEquipmentSelector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ogValue"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/refractometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/refractometer" />

        <RadioButton
            android:id="@+id/hydrometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydrometer" />
    </RadioGroup>

    <EditText
        android:id="@+id/measuredValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/measuredValue"
        android:layout_below="@id/measurementEquipmentSelector"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/measuredUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/measuredValue"
        android:layout_toRightOf="@id/measuredValue"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/correctedGravityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/measuredValue"
        android:layout_below="@+id/measuredValue"
        android:layout_marginTop="26dp"
        android:text="@string/correctedGravity" />

    <EditText
        android:id="@+id/correctedGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/correctedGravityLabel"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/correctedGravityUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/correctedGravity"
        android:layout_toRightOf="@id/correctedGravity"
        android:textIsSelectable="false" />

</RelativeLayout>